objects/SVMX_PS_VS_Stock_Transfer_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings to control Stock Transfer</description>
    <label>Stock Transfer Settings</label>
    <fields>
        <fullName>SVMX_PS_VS_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to store the value(true/false)</description>
        <inlineHelpText>Field to store the value(true/false)</inlineHelpText>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Field_Type__c</fullName>
        <description>This indicates what type of value is expected for the custom setting</description>
        <inlineHelpText>This indicates what type of value is expected for the custom setting</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Text_Value__c</fullName>
        <description>Field to store Text Value</description>
        <inlineHelpText>Field to store Text Value</inlineHelpText>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>